@@ -1,10 +1,3 @@
-CREATE TABLE j2j_rosters (
-    num bigint NOT NULL AUTO_INCREMENT,
-    id integer,
-    jid varchar(255),
-    PRIMARY KEY(num)
-);
-
 CREATE TABLE j2j_users (
     id bigint NOT NULL AUTO_INCREMENT,
     jid varchar(255),
@@ -18,12 +11,17 @@ CREATE TABLE j2j_users (
     primary key(id)
 );
 
+CREATE TABLE j2j_rosters (
+    user_id integer,
+    jid varchar(255),
+);
+
 CREATE TABLE j2j_users_options (
-    id integer,
+    user_id integer,
     replytext varchar(255),
     lightnotify boolean DEFAULT false,
     autoreplybutforward boolean DEFAULT false,
     onlyroster boolean DEFAULT false,
     autoreplyenabled boolean DEFAULT false,
-    primary key(id)
+    primary key(user_id)
 );
